# esp32_lvgl_Mexico

./: README.md
5_35_LVGL_Full_Test-S024/: CMakeLists.txt  sdkconfig  sdkconfig.old
5_35_LVGL_Full_Test-S024/components/lvgl/: lv_conf.h
5_35_LVGL_Full_Test-S024/components/lvgl/lvgl/src/lv_font/: lv_font.h  lv_font.mk  lv_font_xjz_12.c
5_35_LVGL_Full_Test-S024/components/lvgl_esp32_drivers/: CMakeLists.txt
5_35_LVGL_Full_Test-S024/components/lvgl_esp32_drivers/lvgl_tft/: CMakeLists.txt  ili9341.c
5_35_LVGL_Full_Test-S024/components/lvgl_esp32_drivers/lvgl_touch/: CMakeLists.txt  xpt2046.c
5_35_LVGL_Full_Test-S024/main/: CMakeLists.txt  _wepicture_alpha_180x180.c  freertosTest.c  freertosTest.h  main.c  weatherReport.c  weatherReport.h
